# monkey

crates/monkey-cli/: Cargo.toml
crates/monkey-cli/src/: main.rs
crates/monkey-lang/: Cargo.toml
crates/monkey-lang/src/: lib.rs  spanned.rs  traits.rs
crates/monkey-lang/src/ast/: block.rs  expr.rs  expr_binary.rs  expr_call.rs  expr_infix.rs  expr_lit.rs  expr_postfix.rs  expr_prefix.rs  file.rs  generated.rs  ids.rs  list.rs  lit.rs  lit_bool.rs  lit_fn.rs  lit_num.rs  lit_str.rs  mod.rs  op.rs  stmt.rs  stmt_expr.rs  stmt_if.rs  stmt_let.rs  stmt_return.rs  token.rs
crates/monkey-lang/src/evaluating/: eval.rs  eval_error.rs  mod.rs  value.rs
crates/monkey-lang/src/evaluating/eval/: expr.rs  file.rs  lit.rs  lit_bool.rs  lit_num.rs  lit_str.rs  stmt.rs  stmt_expr.rs
crates/monkey-lang/src/parsing/: lexer.rs  mod.rs  parse.rs  parse_error.rs  parser.rs  peek.rs  tests.rs
crates/monkey-lang/src/parsing/snapshot_inputs/lexer/: comments.txt  ident.txt  numbers.txt  punct.txt  string.txt
crates/monkey-lang/src/parsing/snapshot_inputs/parser/: err_no_semicolon.txt  expr.txt  expr_named.txt  expr_prefix_bang.txt  lit_bool.txt  lit_num.txt  stmt_if.txt  stmt_let.txt  stmt_return.txt
crates/monkey-lang/src/parsing/snapshots/lexer/: monkey_lang__parsing__lexer__tests__lexer@bool_lit.snap  monkey_lang__parsing__lexer__tests__lexer@comments.snap  monkey_lang__parsing__lexer__tests__lexer@delimiters.snap  (+8 more)
crates/monkey-lang/src/test_data/lexer/: bool  comments  delimiters  ident  keywords  multichar  num  operators  punct  simple  string
crates/monkey-lang/tests/: trybuild.rs
crates/monkey-lang/trybuild/err/: 01-not-implement-parse.rs  02-unit-struct.rs  03-enum.rs  05-enum.rs
crates/monkey-lang/trybuild/ok/: 01-simple-parse.rs
xtask/: Cargo.toml
(+76 files in other folders)
