[package]
name = "monkey-cli"
version = "0.1.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "monkey"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
rustyline = "7.1.0"
