[package]
name = "monkey-lang"
version = "0.1.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol_str = "0.1.17"
thiserror = "1.0.24"

[dev-dependencies]
expect-test = "1.1.0"
