[package]
name = "monkey-lang"
version = "0.1.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol_str = "0.1.17"
thiserror = "1.0.24"
unicode-xid = "0.2.1"
itertools = "0.10.0"
text-size = "1.1.0"
la-arena = "0.2.0"
paste = "1.0.5"

monkey-util = { path = "../monkey-util" }
monkey-macros = { path = "../monkey-macros" }

[dev-dependencies]
insta = { version = "1.6.3", features = ["glob"] }
trybuild = "1.0.42"
